fixed security issues mentioned by sonarqube

--- a/src/app/shared/components/table/table.component.html
+++ b/src/app/shared/components/table/table.component.html
@@ -1,4 +1,4 @@
-<table summary="table template to list the items">
+<table aria-label="table template to list the items">
     <tr>
         <th *ngFor="let header of headers">{{header}}</th>
         <th *ngIf="isDeleteOption">Delete</th>
