--- a/src/app/user-management/components/login/login.component.html
+++ b/src/app/user-management/components/login/login.component.html
@@ -1,5 +1,5 @@
 <form (ngSubmit)="form.valid && login()" #form="ngForm">
-    <table summary="login form">
+    <table aria-label="login form">
         <tr>
             <th colspan="2">Login</th>
         </tr>
